--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.3.2
   pinput: ^5.0.2
   another_xlider: ^3.0.2
+  dotted_border: ^3.1.0
 
 dev_dependencies:
   flutter_test:
