--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pinput: ^5.0.2
   another_xlider: ^3.0.2
   dotted_border: ^3.1.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
