--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   another_xlider: ^3.0.2
   dotted_border: ^3.1.0
   url_launcher: ^6.3.2
+  signature: ^6.3.0
 
 dev_dependencies:
   flutter_test:
