--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.4.1
   dio: ^5.9.0
   shared_preferences: ^2.5.3
+  file_picker: ^10.3.7
 
 dev_dependencies:
   flutter_test:
