--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dio: ^5.9.0
   shared_preferences: ^2.5.3
   file_picker: ^10.3.7
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
